Productos: validacion JWT, roles, categorias en RDS y tests